--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
                 Avid self-learner, proactive, organized and dedicated to everything I do.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- icon -->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link href="favicon.ico" rel="shortcut icon">
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <!-- css -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,900|Merriweather">
@@ -27,44 +27,41 @@
         </div>
         <div class="description">
             <p><span id="my-traits"></span><span class="typer-effect">|</span> based in Lisbon</p>
-            <div class="tools">
+        </div>
+        <div class="tools">
+            <div class="packages">
                 <span class="devicons devicons-sublime"></span>
                 <span class="devicons devicons-atom"></span>
-                <span class="devicons devicons-photoshop"></span>
-                <span class="devicons devicons-illustrator"></span>
-                <span class="devicons devicons-responsive"></span>
-                <span class="devicons devicons-phonegap"></span>
-                <span class="devicons devicons-opensource"></span>
-                <span class="devicons devicons-w3c"></span>
-                <span class="devicons devicons-android"></span>
                 <span class="devicons devicons-npm"></span>
                 <span class="devicons devicons-nodejs"></span>
-                <span class="devicons devicons-wordpress"></span>
+                <span class="devicons devicons-phonegap"></span>
+                <span class="devicons devicons-opensource"></span>
+                <span class="devicons devicons-git"></span>
+            </div>
+            <div class="languages">
                 <span class="devicons devicons-html5"></span>
                 <span class="devicons devicons-css3"></span>
-                <span class="devicons devicons-stylus"></span>
                 <span class="devicons devicons-sass"></span>
                 <span class="devicons devicons-javascript_badge"></span>
                 <span class="devicons devicons-jquery"></span>
                 <span class="devicons devicons-gulp"></span>
                 <span class="devicons devicons-bootstrap"></span>
-                <span class="devicons devicons-java"></span>
-                <span class="devicons devicons-git"></span>
+                <span class="devicons devicons-wordpress"></span>
             </div>
         </div>
         <div class="find-me">
             <div class="codepen">
-                <a href="#" target="_blank">
+                <a href="https://codepen.io/shvvffle" target="_blank">
                     <span class="devicons devicons-codepen"></span>
                 </a>
             </div>
             <div class="github">
-                <a href="#" target="_blank">
+                <a href="https://github.com/shvvffle" target="_blank">
                     <span class="devicons devicons-github_alt"></span>
                 </a>
             </div>
             <div class="website">
-                <a href="#" target="_blank">
+                <a href="http://marinamarques.pt" target="_blank">
                     <span class="devicons devicons-terminal"></span>
                 </a>
             </div>
