--- a/index.html
+++ b/index.html
@@ -22,22 +22,13 @@
     <div class="container">
         <div class="box">
             <div class="name">
-                <h1>Marina Marques</h1>
+                <h1>marina marques</h1>
             </div>
         </div>
         <div class="description">
-            <p><span id="my-traits"></span><span class="typer-effect">|</span> based in Lisbon</p>
+            <p><span id="my-traits">Front-end developer</span><span class="typer-effect">|</span> based in Lisbon</p>
         </div>
         <div class="tools">
-            <div class="packages">
-                <span class="devicons devicons-sublime"></span>
-                <span class="devicons devicons-atom"></span>
-                <span class="devicons devicons-npm"></span>
-                <span class="devicons devicons-nodejs"></span>
-                <span class="devicons devicons-phonegap"></span>
-                <span class="devicons devicons-opensource"></span>
-                <span class="devicons devicons-git"></span>
-            </div>
             <div class="languages">
                 <span class="devicons devicons-html5"></span>
                 <span class="devicons devicons-css3"></span>
